# OA_Bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  Pipfile  README.md  README_JP.md  bot.py  compose.yml  data.json  pyproject.toml  requirements.txt  setting.json
.github/workflows/: deploy.yml
OA_Bot/: __init__.py  bot.py
OA_Bot/cogs/: __init__.py  ai.py  contextMenu.py  error.py  event.py  id.py  main.py  music.py  react.py  role.py  task.py
OA_Bot/core/: __init__.py  check.py  classes.py  data.py  logger.py  paths.py  tools.py
OA_Bot/data/: data.json.example  on_message_ignore.db.example
cmds/: ai.py  error.py  event.py  id.py  main.py  react.py  task.py  test.py
cogs/: ai.py  contextMenu.py  error.py  event.py  id.py  main.py  music.py  react.py  role.py  task.py  test.py
core/: check.py  classes.py  data.py  logger.py  tools.py
