[project]
name = "oa-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "discord-py[voice]>=2.7.1",
    "openai>=2.9.0",
    "pynacl<1.6",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "yt-dlp>=2026.3.17",
]
